파일 업로드 처리 / 모달창 보더 수정 / 클릭시 효과 넣어봄 / 웹으로 봐도 안깨지게끔 페이지 몇개 수정

--- a/src/main/resources/static/css/bucket/bucketDetail.css
+++ b/src/main/resources/static/css/bucket/bucketDetail.css
@@ -62,8 +62,8 @@ a {
 	text-align: center;
 	justify-content: center;
 	vertical-align: middle;
-	border-radius: 30px;
 	border-top: solid 1px;
+	border-radius: 30px;
 	border-color: #FFC3C3;
 }
 
@@ -312,4 +312,8 @@ font-family: 'Bookk Myungjo';
 }
 .editReplyForm{
 	display: none;
+}
+
+.except1{
+	border:none !important;
 }
