--- a/src/main/resources/static/css/mainImg.css
+++ b/src/main/resources/static/css/mainImg.css
@@ -10,6 +10,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	cursor: pointer;
 }
 
 .questionText {
@@ -34,6 +35,7 @@
 	height: 32px;
 	left: 30px;
 	top: 87px;
+	cursor: pointer;
 }
 
 .mainBackground{
@@ -49,13 +51,15 @@
 	top: 210px;
 	left: 30px;
 	width:170px;
+	cursor: pointer;
 }
 
 .mainBucketList{
 	position: absolute;
 	top : 420px;
-	right: 10px;
+	left: 263.33px;
 	width: 120px;	
+	cursor: pointer;
 }
 
 .mainDailyQuestion{
@@ -63,13 +67,15 @@
 	top : 460px;
 	left : 45px;
 	width: 230px;
+	cursor: pointer;
 }
 
 .mainWhisper {
 	position: absolute;
 	top: 370px;
-	right: 140px;
+	left: 163.33px;
 	width: 90px;
+	cursor: pointer;
 }
 
 .dailyQuestionText{
