MyPage 닉네임 설정, 가족 정보 닉네임 설정 및 출력 이미지 출력, 가족 코드 출력 + 테이블 수정 (ITDAUSER nickname 추가, NICKNAME selfNickName 제거) 질문 등록 수정 4.18 할 일 < 닉네임 등록, 이미지 등록(변경), 가족 이미지 설정, 가족 코드 복사>

--- a/src/main/resources/static/css/user/myInfo.css
+++ b/src/main/resources/static/css/user/myInfo.css
@@ -30,19 +30,21 @@
 
 .myInfoNicknameText	{
 	position: absolute;
-	left: 183px;
-	top: 118px;
+	left: 180px;
+	top: 125px;
 	font-family: 'Bookk Myungjo';
 	font-style: normal;
 	font-weight: 300;
 	font-size: 18px;
 	color: #2A221D;
+	background: transparent;
+	border: none;
 }
 
 .textEditBtnImg	{
 	position: absolute;
 	left: 262px;
-	top: 118px;
+	top: 125px;
 }
 
 .myInfoUsernameText	{
