--- a/src/main/resources/static/css/timeline/postView.css
+++ b/src/main/resources/static/css/timeline/postView.css
@@ -71,11 +71,39 @@ a {
 	color: #2A221D;
 }
 
+.fam-name-area {
+	position:absolute;
+	height: 81px;
+	top:262px;
+	left:0px;
+	background-color: rgba(255, 255, 255);
+	width: 100%;
+}
+
+.fam-name {
+	position: absolute;
+	left: 22px;
+	top: 15px; 
+	font-family : 'Bookk Myungjo';
+	font-size: 25px;
+	color: #2A221D;
+	font-family: 'Bookk Myungjo';
+}
+
+.member-text {
+	position: absolute;
+	left: 22px;
+	top: 50px;
+	font-family: 'Bookk Myungjo';
+	font-size: 15px;
+	color: #9D9690;
+}
+
 .allPostLayout{
    position: relative;
    width: 393px;
    left: 0px;
-   top: 370px;
+   top: 340px;
 }
 
 .postLayout{
