--- a/src/main/resources/static/css/timeline/postView.css
+++ b/src/main/resources/static/css/timeline/postView.css
@@ -99,6 +99,17 @@ a {
 	color: #9D9690;
 }
 
+
+.fam-member-img {
+	border: 0.5px solid #e4e4e4;
+	position: absolute;
+	width: 50px;
+    height: 50px;
+    border-radius: 50px;
+	left: 16px;
+	top: 13px;
+}   
+
 .allPostLayout{
    position: relative;
    width: 393px;
