--- a/src/main/resources/static/css/whisper/whisperOutbox.css
+++ b/src/main/resources/static/css/whisper/whisperOutbox.css
@@ -3,40 +3,38 @@
 
 
 .dateLine1 {
-	position: relative;
+	position: absolute;
 	width: 137px;
-	height: px;
 	left: 15px;
-	top: 11em;
+	top: 0;
 	border: 1px solid #BBB3AB;
 }
 
 .dateLine2 {
-	position: relative;
+	position: absolute;
 	width: 137px;
-	height: 0px;
 	left: 238px;
-	top: 162px;
+	top: 0;
 	border: 1px solid #BBB3AB;
 }
 
-.outboxListDate {
-	position: relative;
-	left: 164px;
-	top: 172px;
+.outboxList{
+		position: relative;
 	font-family: 'Bookk Myungjo';
-	font-style: normal;
-	font-weight: 300;
+	margin-bottom: 25px;
+}
+
+.outboxListDate {
+	position: absolute;
+	left: 164px;
+	top: -7px;
+	font-family: 'Bookk Myungjo';
 	font-size: 13px;
-	line-height: 13px;
-	display: flex;
-	align-items: center;
-	text-align: center;
 	color: #9D9690;
 }
 
 .outboxText {
-	position: relative;
+	position: absolute;
 	width: 162px;
 	height: 39px;
 	left: 30px;
@@ -52,92 +50,93 @@
 }
 
 .cardFrame {
-	position: relative;
 	width: 307px;
 	height: 139px;
-	left: 43px;
-	top: 184px;
+	margin-left: 43px;
 }
 
 .toPersonText {
-	position: relative;
-	height: 33px;
+	position: absolute;
 	left: 63px;
-	top: 12em;
-	font-family: 'Bookk Myungjo';
-	font-style: normal;
-	font-weight: 300;
-	font-size: 9px;
-	line-height: 9px;
-	display: flex;
-	align-items: center;
+	top: 1em;
+	font-size: 12px;
 	color: #2A221D;
 }
 
 .toPersonName {
-	position: relative;
-	width: 103px;
-	height: 33px;
+	position: absolute;
 	left: 63px;
-	top: 6.5em;
+	top: 2.3em;
 	font-family: 'Bookk Myungjo';
-	font-style: normal;
-	font-weight: 300;
 	font-size: 15px;
-	line-height: 15px;
-	display: flex;
-	align-items: center;
 	color: #2A221D;
 }
 
 .toPersonLine {
-	position: relative;
+	position: absolute;
 	width: 112px;
-	height: 0px;
 	left: 63px;
-	top: 6em;
+	top: 4em;
 	border: 1px solid #BBB3AB;
 }
 
 .sendDateText {
-	position: relative;
-	width: 52px;
-	height: 19px;
-	left: 238px;
-	top: -0.5em;
-	font-family: 'Bookk Myungjo';
-	font-style: normal;
-	font-weight: 300;
-	font-size: 10px;
-	line-height: 10px;
-	display: flex;
-	align-items: center;
-	text-align: center;
+	position: absolute;
+	left: 243px;
+	top: 1em;
+	font-size: 11px;
 	letter-spacing: 0.05em;
 	color: #9D9690;
 }
 
 .sendDate {
-	position: relative;
-	width: 49px;
-	height: 33px;
+	position: absolute;
 	left: 283px;
-	top: -3em;
-	font-family: 'Bookk Myungjo';
-	font-style: normal;
-	font-weight: 300;
-	font-size: 10px;
-	line-height: 10px;
-	display: flex;
-	align-items: center;
-	text-align: right;
+	top: 1em;
+	font-size: 11px;
 	color: #9D9690;
 }
 
 .outboxCardStamp {
-	position: relative;
+	position: absolute;
 	width: 63px;
-	height: 63px;
+	height: 4em;
 	left: 271px;
-	top: -3em;
+	top: 2em;
+}
+
+.fromPersonText {
+	position: absolute;
+	left: 219px;
+	top: 6em;
+	font-size: 12px;
+	color: #2A221D;
+}
+
+.fromPersonName {
+	position: absolute;
+	left: 219px;
+	top: 6em;
+	font-size: 15px;
+	color: #2A221D;
+}
+
+.fromPersonLine {
+	position: absolute;
+	width: 112px;
+	height: 0em;
+	left: 219px;
+	top: 8em;
+	border: 1px solid #BBB3AB;
+}
+.dateBox{
+	position: relative;
+	margin-bottom: 25px;
+	display: inline-block;
+}
+
+.whisperContainer{
+	position: relative;
+	top: 120px;
+	
 }
