--- a/src/main/resources/static/css/timeline/postContent.css
+++ b/src/main/resources/static/css/timeline/postContent.css
@@ -4,6 +4,16 @@ a {
 	text-decoration: none;
 }
 
+.fam-member-img {
+	border: 0.5px solid #e4e4e4;
+	position: absolute;
+	width: 50px;
+    height: 50px;
+    border-radius: 50px;
+	left: 16px;
+	top: 13px;
+}   
+
 .gobackbtn{
    position: absolute;
    width: 20px;
