--- a/src/main/resources/static/css/dailyquestion/dailyMain.css
+++ b/src/main/resources/static/css/dailyquestion/dailyMain.css
@@ -21,7 +21,7 @@
 .AnswerStickerBox {
 	position: absolute;
 	height: 43px;
-	width: 100%;
+	width: 393.33px;
 	top: 133px;
 	text-align: center;
 }
