--- a/src/main/resources/static/css/dailyquestion/dailyMonthlyPage.css
+++ b/src/main/resources/static/css/dailyquestion/dailyMonthlyPage.css
@@ -109,3 +109,13 @@
 	letter-spacing: 0.06em;
 	color: #2A221D;
 }
+
+.imgScale{
+	width:393.33px;
+	height: 851.33px;
+}
+
+.stickerImgScale{
+	width:50px;
+	height:50px;
+}
