--- a/src/main/resources/static/css/error.css
+++ b/src/main/resources/static/css/error.css
@@ -2,15 +2,14 @@
 
 
 .layout {
-	min-width: 100%;
-	max-wdith: 393.33px;
+	width: 393.33px;
 	min-height: 851.33px;
 	background-image: url("/image/itdaBackImg.png");
 }
 
 .error-messageText {
     position: absolute;
-    top: 50%;
+    top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
