--- a/src/main/resources/static/css/whisper/whisperWrite.css
+++ b/src/main/resources/static/css/whisper/whisperWrite.css
@@ -254,3 +254,16 @@ select option[value=""][disabled] {
 	align-items: center;
 	color: #2A221D;
 }
+
+.picker-xy{
+	position: absolute;
+	width: 200px;
+	height: 33px;
+	text-align: center;
+	left: 63px;
+	top: 745px;
+	font-family: 'Bookk Myungjo';
+	font-weight: 300;
+	align-items: center;
+	color: #2A221D;
+}
