--- a/src/main/resources/static/css/dailyquestion/dailyMain.css
+++ b/src/main/resources/static/css/dailyquestion/dailyMain.css
@@ -107,7 +107,7 @@
 	font-style: normal;
 	font-weight: 300;
 	font-size: 16px;
-	line-height: 16px;
+	line-height: 1.25em;
 	display: flex;
 	align-items: center;
 	letter-spacing: 0.05em;
